examples/fail/semantic/builtin_wrong_args.bina
// EXPECT_SEMANTIC_ERROR: len expects string or array
fn main() -> int {
    let x = len(123);
    return 0;
}
